--- a/manifest.json
+++ b/manifest.json
@@ -18,7 +18,9 @@
         "32": "images/icon-32.png",
         "48": "images/icon-48.png",
         "128": "images/icon-128.png"
-      }
+      }/*,
+      "default_popup": "popup.html",
+      "default_title": "Click here!"*/
     },
     "permissions": ["activeTab", "scripting"],
     "commands": {
